bit of styling inbetween kaggle competition

--- a/in_progress/pandas_elections/2018.ipynb
+++ b/in_progress/pandas_elections/2018.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -46,13 +46,6 @@
    "source": [
     "### Used to style Python print statements\n",
     "class color:\n",
-    "    PURPLE = '\\033[95m'\n",
-    "    CYAN = '\\033[96m'\n",
-    "    DARKCYAN = '\\033[36m'\n",
-    "    BLUE = '\\033[94m'\n",
-    "    GREEN = '\\033[92m'\n",
-    "    YELLOW = '\\033[93m'\n",
-    "    RED = '\\033[91m'\n",
     "    BOLD = '\\033[1m'\n",
     "    UNDERLINE = '\\033[4m'\n",
     "    END = '\\033[0m'"
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +276,7 @@
        "4      Standard  ATTORNEY GENERAL         Incumbent          5764   5027909.01  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -312,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAABAsAAAHrCAYAAACpRhSSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAIABJREFUeJzs3XnYrdd8P/73kQHhpISjpHwTvtVP\nKVVDzUMaRVBjDUFCECo1D998UWr6arWpVClChBiSxhSUVgyJtCqGmrWpj0rMfjhNIpJKguT5/bHv\nJ/Z68pw5zXPynNfrunJ59rrXve7PvVcuV/Z7r3XvNQsLCwEAAABYdIWVLgAAAADYvggLAAAAgIGw\nAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAFhWVe1dVQtV9c/LHHvTdOyaK1HblqiqW1XVuy7F\n8c6tqr0vrfH+p1XVwVX1xytdBwCXL8ICAGBjzk/yG1W112JDVV0lyR1XrqQt092f7e4HrXQdK+iO\nSXZb6SIAuHzZeaULAAC2axcmeXuSRyT5s6ntgUnel+SZi52q6vFJnjL1/2GSJ3X316rq6CQ/SXLT\nJNdL8tUk+3f3uVV1oyR/k+QaSXZK8srufmNVHZlkfXc/dxr7EUke1N0PmC+sqr6Z5NNJfjvJc5P8\nfPrfXZNcK8mbu/v5VbVPkr/t7ptU1R2THD5dbyHJn3f3u6tq1yR/keQu07EvJHlKd/+kqu6U5FVT\n/3/NBr5smep5T5I7Jblakpd392unY/dJ8ryptp8meVZ3f7KqXpjkdkmuk+TL3X3A3Hh7J/mnJCcn\nuVmSNdP7+vGq+tUkr0vyq0muneRbSR7S3T9a5n25b5K7VdV50xw9ubs/PF3jyCT/1t1/s9w9AbDj\nsrIAANiUtyQ5YO71o5IcvfiiqvZNcmiS3+vumyU5Nsl7q2rN1OWWSfZLcqMkeyZ5cFXtnORdSZ7d\n3bfM7EP6s6rqtkleneSgqU+S/FGSIzZQ2791942SvDez8OJR3X2rJLdN8pxltkm8KMnh0zUfk2Tf\nqf3ZSX6R5JbTPXw/ycumEOGdSZ7Z3TdP8rEkV97Ie7Vbkt9Nsk+SF1fVTavqhpkFLfeaxnh8kuOn\nFRpJsleSW8wHBXP+V5IPdffvTDW+vap2SbJ/kk929+2S3CCzAOLApe9Ld78nyd8n+evufnWS1yY5\nOEmqavck90vy5o3cDwA7KGEBALBR3f25JBdV1S2r6npJ1nb3v8112S/J27t7/dT/6CS/lmTv6fgJ\n3X1Bd/88yVeS7JHkN5L87yRvrKovZvYN+pWT3Ly7v5jkG0nuPa0+2DPJhzdQ3senay4kuU+SW1bV\nCzJbPbAmyVWW9H9HkldX1TGZhRjPndr/ILMPzl+Y6rl/khtntiLi59194nSdv0tyzkberld390J3\nfzfJCUnunuRuma0cOHEa+5gkFyX59emcT3X3LzYw3lndfex07Q9mtnLjt6eVAKdU1TOSvCbJTZJc\nden7soyjM1tlsC6z1SIf6O4fb+R+ANhB2YYAAGyOt2a2umD99Pe85b58WJNkl+nv8+baF6ZjOyX5\n8fSNeZJkWlp/9vTy1Zl98/+1JK+fwoDlnDude5XMtg68J7MPym/M7AP/mvnO3f26qnp/Zh/i90vy\nwqr67amep04fyFNVV01ypcy+2R/GyGwFwobMH7tCZh/ud0pyYnc/dO5er5fZ6oUHLN7DZox38ZhV\n9RdJbj3d58cye6/n61x2zO7+cVW9M7O5fHiSJ27k2gDswKwsAAA2x9uSPDjJQzPbZjDvQ0keOn1b\nnap6dJIzknx9I+N1kvOr6oDpnOsl+bfMvu1PZlsUbp7kDzP7QLwpN0yye5Lndff7M9vWcMXMPqhf\nrKpOyWz1wtGZbQe4WpKrT/fwpKrataqukOTIJH+e2UqINVV1r+n8+079N+SRU7//lVkg8cEkJyW5\ne1X95nTsXkm+nFkYsSnrqmq/6bz7ZPZchq8kuUeSV3T3W5P8KLPVCzttYIxf5JfBTTILYp6S5Ard\n/ZnNqAGAHZCwAADYpO7+XpL/SPKf3X3mkmMfSfLXSU6qqn/P7JkGf9DdF21kvJ9ltuz/4Kr6cmbb\nDJ7f3Z+YO/6uzPbl/9dmlPjlJB9I8tWq+nxmD/U7Nb9c6r/o0MyeJfCFzL6Rf1F3fzPJS5J8M7PV\nCadm9i39M6etE/dP8pJpC8EDM/twviHXr6rPZbYF4Sk98++ZBRPHVdWXpmvdt7v/ezPu6/wkB07n\n/UmS+3f3hUlenOSvpmsdn+RflrnXRR9M8pSqek6SdPeXkpyVDT8HAgCyZmFhQ6v6AABWxrSt4J+T\n/HF3f3ql69kc068QPKi7P3spjbd3Zg8qvOqm+m7huP87s19YqO7+6aU5NgCrh5UFAMB2parukeQ7\nST52eQkKLi+q6sVJPpHZTzcKCgDYICsLAAAAgIGVBQAAAMBAWAAAAAAMhAUAAADAYOeVLoDt2y9+\nceHCWWd5/tHl3dWvvlvM4+pgLlcH87h6mMvVwTyuDuZx9TCXl61169auWa7dygI2auedd1rpErgU\nmMfVw1yuDuZx9TCXq4N5XB3M4+phLrcPwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAZrFhYWVroG\ntmPrX/s2/4IAAABsiQfdb6Ur2Gx+DQEAAADYLMICAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIA\nAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAAYCAs\nAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAY7r3QBK6mq9knyjiSn\nJlmTZJckr0jymSRfTvL5JafcNcnzp3+u193fn8a5VpLvJXlcdx9dVeuS/FWSvZLslOQ7SZ7R3T+Y\n+t8pyZ9O17tKkjd192uW1LOQZPckpyd5RHf/bDr3IUnelOSGc9c/cbrObyb5UZIzk3wkySeSPKG7\n96+qKyR5dpJ7JrlwGv8p3f2VbX4jAQAAWFV26LBgclJ3758kVXXVJP+U5LFJTu3ufZZ2rqok+VqS\nh2QWLCTJQ5N8ezq+JsnxSf6qu983tf1+kg9U1W0yCxBemWS/7v5hVV05yceq6vQk58/XM517bJL7\nJnnX1PS46fzHJ3lhknT3Xae+Ryc5rrtPmF7P139okmsmuUt3X1RVv5vkfVVV3f3zLX7XAAAAWLVs\nQ5jT3ecmeV2SZ22i69szCwsW3SfJ+6e/b5nk7MWgYBr3o0lOS3LnJAcmeUt3/3A6dl6Se2S2EmBQ\nVbsmuU6Ss6bX10+yR5K/SHJgVe2yBbf3+CQv6e6Lpuv+a5LfFRQAAACwlJUFl/TDzL6Bv3FVnTzX\n/rnufub09w+S/HdV3SCzwOU7ma0KSJIbZBYMLHV6ZqsK9kzyxfkD3X12cvGqhX2n614ryUVJXt/d\nJ05dH5vkjd3946r6ZJIHZhZcbI7duvusJdc9YzPPBQAAYAciLLikvZL8S5KrLbcNYc7fJdk/s+cO\nHJPk7lP795LsvUz/G2a2emDPJNebP1BVN8svV3mcND1j4BpT/29MfXZKckCSb1TVfTJbYfCkbH5Y\ncFZV7d7dP5m77gOSnDjfBgAAALYhzKmq3TN7JsA7N6P7u5PcL8mdkpw8135KkmtPH+gXx90vya9n\n9jyEY5McPD0EcfE5Ca/LbLvBxaZv/Q9I8oaquk6SeyX51+7+ve7er7tvneRXq+q3N/P23pzkBdMz\nFVJVt09yeH65IgIAAACSWFmQ/HLZ/4WZvR8vSHJBLrkNIUkevfhHd59dVd9Nctr0wMDF9oUpKHhF\nVT136v6dJPfu7guTfLOqDk1yfFVdmGRtkjd09z8ueSBhuvvUqnplZg80vGKSNyyp5w2ZrS54/Gbc\n52FJXpLkk1X18yQ/T3LfxV9ZAAAAgEVrFhYWVroGtmPrX/s2/4IAAABsiQfdb6Ur2Gzr1q1ds1y7\nbQgAAADAQFgAAAAADIQFAAAAwEBYAAAAAAyEBQAAAMBAWAAAAAAMhAUAAADAQFgAAAAADIQFAAAA\nwEBYAAAAAAyEBQAAAMBAWAAAAAAMhAUAAADAQFgAAAAADIQFAAAAwEBYAAAAAAyEBQAAAMBAWAAA\nAAAMhAUAAADAQFgAAAAADNYsLCysdA1s3xbWrz9npWtgG61btzbmcXUwl6uDeVw9zOXqYB5XB/O4\nepjLy9a6dWvXLNduZQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAw\nEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAA\nAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEA\nAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMNh5\npQvYkVXVDZL8ZZLrJvlpkvOSHJrkwUkenuT7U9drJDmuu19aVQcleXGS0+eG+kp3P7mqTk6y2zTW\nosOS/HuS/0xy2+7+3HTtJyS5dne/8H/k5gAAALjcEhaskKraLcnfJ3lcd39yart1klcnOTnJ4d19\nxNR+xSSnVtWR0+nHdvezNzD0I7v7q0uutXeSnyR5U1X9bndfcGnfDwAAAKuHbQgr5z5JTloMCpKk\nuz+T5PeW6XuNJLtktvJga/1nkhOSvHQbxgAAAGAHYGXByrl+kq8vvqiq9yX5lSTXSfLxJA+vqocl\nuV6S7yU5uLvPqapMx247N9ZR3f3W6e+3VNX8NoQHz/39/CSfqao7Xup3AwAAwKohLFg530lyq8UX\n3X2/JKmqT2U2L4d39xFVdcskxyX52ty5W7oN4SrTNS6oqkcnOTbJkcudDAAAALYhrJz3Jfn9+RUC\nVfXrmT3scGGxbXog4cuSHFdV2zxf3f35zMKC/7utYwEAALA6WVmwQrr73Kq6T5KXVdV1MpuLC5M8\nPclvLel7VFU9NMkhSf47l9yGcPbiyoRcchvC25N8cMnl/yyzZyYAAADAJaxZWFjYdC92ZAvr15+z\n0jWwjdatWxvzuDqYy9XBPK4e5nJ1MI+rg3lcPczlZWvdurVrlmu3DQEAAAAYCAsAAACAgbAAAAAA\nGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAA\nAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAA\nAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgI\nCwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACA\ngbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAA\nABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAIDBzitdwPagqvZJ\n8oTu3n+u7egkxyX5apIvJ/l8kjVJrpLkOd39kap6YZKHJ/n+3HAf6e6XVtU3k3w7yUVJdkpy1SSP\nS3JBkldNfW+b5DNTn8O6+x+ma38xySe6+4lz9fwsySnTy12mMR/W3d+oqpOn+r869T00ydOTXL+7\nz5+7n927+4FzY/6gu6+9Ne8ZAAAAq5ewYPOc2t37JElV/UaS45PcZDp2eHcfsYHz7j73Yf0eSV7Y\n3X+QZHGsb873mdrukOQrSfatqrXdfc506MzFGqZ+f5TkmUmetMx1D8gs6Ng/ydFz7XesqgO7+62b\nddcAAADskGxD2HJXT/KjrThvryRnbUa/xyV5V5L3JHnUlo43rZI4LckRSZ645PBzkryoqq67GXUA\nAACwg7KyYPPceFrqv3OSmyd58tyxZ1TV/nOvX9rdH5n+/nBVXSnJnklOSPKsjV2kqnZPcsckByc5\nNcl7k/ztdHiPqYbdk+yR2eqGP11mmIOTvKG7u6ouqKrbdPenp2PfS/L8JEcluccm7xoAAIAdkrBg\n88xvQ7h2ki9U1YnTsU1uQ6iqP0ty/Wx6RcIjMlvt8YHp9XWq6q7dfWKmbQhVtVNmWwt+1t3nzp9c\nVVdPcq8k16qqJyf5lcy2KSyGBenuY6rqAVV1yGbdOQAAADsc2xC23JlJzsuWBS3Py2x1wR9vot/B\nSe7T3ft1936ZrWAYthJ094VJHp/kAVV17yXnH5DkqO6++3T+bZLcvarWLel3SGarHNZuwT0AAACw\ngxAW/NLdq+qzi/8k2XXu2I2r6uSqOinJx5Mc2d2nTceeMR1b/Od1Swfu7osyCwKeV1V7LnfxqrpF\nkjXd/e9zze/O7KGE11sy3nnTeK+qqqvMHTo4yVvn+v10GuNxS85fn+QZSXbb8NsBAADAjmrNwsLC\nStfA9m1h/fpzNt2L7dq6dWtjHlcHc7k6mMfVw1yuDuZxdTCPq4e5vGytW7d2zXLtVhYAAAAAA2EB\nAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQ\nFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAA\nA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAA\nADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAIOdV7oAtm/3Pv4VGzx29J0eexlWAgAA\nwGXFygIAAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsIC\nAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAg\nLAAAAAAGwgIAAABgICwAAAAABjtv7GBV7ZPkfUlu0t3fmdpeluSr3X10VV01yUuT3DzJQpKfJHlm\nd39tyTgvTPLwJN+f+l0xyXO7++Tp+J5Jvp7kUd39zrlrvyPJqdM5uyc5Pckjkjw1yb2TXC3JnlOf\nJHlPknt2935z1353ko9292vn2o5OcoskZ05j75TkkO7+96r6WZJTpq67TMce1t3fqKpvJvl2kovm\nbu+ZSc5I8uUkn59rPynJW5ZpT5K7Jnn+3HuSJNdIclx3v7SqDkry4ul+F32lu59cVScn+UJ3P326\nlytlNh97T6/vP70/a5JcOclh3f2ujY0ZAAAAmLPRsGByQZI3VdXdunthybEjk5zS3U9Nkqq6WZL3\nVtXtuvvsJX0P7+4jpn43SnJMZh/Yk+TRSV6Z5IlJ3jl3zkndvf/ii6o6Nsl9u/uwJIdNgcITFvtU\n1Zokf1BVj+3uo6pq/yS7zAcFcw7t7hOm8+6Z5CVJHpjkzO7eZ+6af5RZIPCkqenu3X3+/EBVtXeS\nU+fP21j7dGzpe3LFJKdW1ZFTl2O7+9nL1J0kD6uq93b3Py0Z8/ZJnp7k3t19blVdI8mnqmoxTNnY\nmAAAAJBk87YhnJTZN/BPnG+sqmsmuWl3v2qxrbu/lOT9mX3o3pg9kpw7jbMmyYFJXp5k16q6yXIn\nVNWuSa6T5KwNDTqFGY9J8vyqunGSP0ny2E3UMtSzjL02ds1L0TUyW8lw3mb0fWqS108rO+Y9Lskr\nuvvcJOnuM5LcOsl/XJqFAgAAsLptzsqCJDkkyWeq6oS5thskOW2Zvqdn9gF7qWdM3/RfmOTHmX2w\nTWZL8r/S3eur6o2ZhRKHTMf2nZbdXyuzpf+v7+4TN1Zod3+nqv40ySeT7N/d6zfQ9S+r6tlTPd9P\ncujUvsd0zd0zCxGOT/Knc+d9uKoWtyFc2N13nf6+8XTeokdsoP1z3f3M6e9nVNXDklwvyfeSHNzd\n50yrDh5eVbedO++o7n7r9PeXMtvicHiSp8z12TPjNoN091nJxSsZNjYmAAAAJNnMsKC7z6iqpyV5\nc5JPTM3fz/KhwA3zy2cIzLt4yf0Sj0ty/SmI2DXJzaYP8cm0DWFaTv+RJN/YzHrfUlV/2d0f3Ei3\ni7chLHFmd+9TVTslOTrJzxa/qZ9cYhvCZIu2IUwO7+4jquqWSY5LMv+sh01tGXhZZnNxz7m2b2UW\nPHxproY7JPnhZo4JAAAAm/9rCN39/iSd5KDp9XeTnFZVF29PqKpbJLlPZt/Gb9K0leG2SW7T3ft1\n977TuY9acu0zkhyQ5A1VdZ3NrXlbdPeFSR6f5AFVde//4Wt9LrMP/8dV1WbNyVTfo5L89Vzzm5L8\nn6q6SpJU1bWmtt0u3YoBAABYzTZ3G8Kip2W2bWDRIzN70OCnM1vOf1aS+3f3jzdzvEcmeff0wXfR\nkZktsT9kvmN3n1pVr8zsQYgP3sK6t0p3n1dVByd589xWgvltCEnyN0m+sJFhlm5DSGYPdFx6raOq\n6qGZ3fd/55JbBs7u7vstOaer6q8ze6hhuvuTVfX6JB+pqp9n9msIz+nuL09BzibHBAAAgDULC0t/\n4AB+6d7Hv2KD/4IcfafNeXYk24N169Zm/fpzVroMLgXmcnUwj6uHuVwdzOPqYB5XD3N52Vq3bu2a\n5do3exsCAAAAsGMQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAAD\nYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAA\nMBAWAAAAAANhAQAAADAQFgAAAACDnVe6ALZv//DAp2X9+nNWugwAAAAuQ1YWAAAAAANhAQAAADAQ\nFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAA\nA2EBAAAAMNh5pQtg+3a/d31opUvYJm+4y+1XugQAAIDLHSsLAAAAgIGwAAAAABgICwAAAICBsAAA\nAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgL\nAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABjsvNIFXFaq\nap8k70tyk+7+ztT2siRfTfKuJC9NcvMkC0l+kuSZ3f21jZ3X3UdX1c+SnDKdt0uS/0hySHf/Yur7\nmiS36+6bz9VycpLdkvw0s8Dm6kkOTfLZJO+cuv1Okq9Nfd6a5MIkv9ndz66qWyf5f9O5a5O8o7tf\nPjf+oUmenuT63X3+1HZ0kt27+4Fz/X7Q3dfe+ncVAACA1WhHW1lwQZI3VdWaJe1HJvl6d9+5u++S\n5HlJ3ltVv7KJ85LkzO7ep7t/r7vvmGT3JPdKkqraLckdk/zHFDrMe+R03p2TPCjJYd29fmrbJ8kX\n5/octeTcv03ylO7+/Wn8/avq5nPHD0hyXJL9l5x3x6o6cIPvDgAAAGTHCwtOSnJmkifOtV0zyU27\n+1WLDd39pSTvT/LAjZx3CVW1S5KrJjl3anpIkhOTHJ3kSRs5da8kZ23uTST5YZInVdUtk1yU5A7d\n/YWphn2SnJbkiGXqfU6SF1XVdbfgWgAAAOxgdrSwIEkOSfL0qvr16fUVMvtwvdTpmX2I39B5i/ao\nqpOr6mNJPpTk5O4+aTp2cJI3JPlokptX1a/NnfeWqjqlqr6b5HFJHr0F9/CIzAKD1yb5UZKXV9UV\n56/Z3Z3kgqq6zdx530vy/CRLVyoAAADAxXa4sKC7z0jytCRvzuz+d80YCiy6YZJvb+S8RfPbEPbt\n7sOSpKpulOQmSV6e5B8ze6bBE+bOe2R33z7JS5Jca/5aG1NVV0pyi+5+SXffeqrzfyV5fFVdPbMt\nEE+tqhOS/EqWrGjo7mOSnFNVh2zO9QAAANjx7HBhQZJ09/uTdJKDknw3yWlVdfGS/aq6RZL7JDl+\nI+dtysFJ/qS79+vu/ZLsm+QxVbXrkjFfl1lQ8NLNLP+iJG+rqt+Yzj8zybcye67CAUmO6u67T9e8\nTZK7V9W6JWMckuRZmT0cEQAAAAY7ZFgweVqS86a/H5nkt6rq01V1Smbf9t+/u3+8ifOWNQUCD0vy\n9sW27v52ki9l9jDDpZ6a5GFVdbNNFd3dP8vsWQhvnOr9VJI1Sd6YWUDx1rm+P03y7sy2OcyPsT7J\nMzL7RQYAAAAYrFlYWFjpGtiO3e9dH7pc/wvyhrvcfqVL2C6sW7c269efs9JlcCkwl6uDeVw9zOXq\nYB5XB/O4epjLy9a6dWuX+9W/HXplAQAAALAMYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAA\nADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYA\nAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAw2HmlC2D79r4H3SPr15+z0mUAAABw\nGbKyAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAA\nAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgL\nAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICB\nsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAY7LzSBSRJVe2T5B1J\nTk2ykOTKSY7p7ldV1dFJbpHkzLlT3trdR03n3jrJvyS5Q3f/69yYd0ryp0l2SXKVJG/q7tcsudai\n9d394CU17Zbk7Ul+Lcnnu/tkXrBgAAAN20lEQVTgZeo+KMmLk5w+13x4kj2WtF8tySe6+4kbu/7G\n7rWqfpbklKntykk+lOQF3b1QVbskeU6SuyW5MMnPkzyvuz9dVXsn+UaS53T3y+Zq//sku3f3Pkvv\nCwAAgB3bdhEWTE7q7v2TpKqumKSr6q3TsUO7+4QNnPe4JC9P8sQkB03n3yDJK5Ps190/rKorJ/lY\nVZ2e5Pz5a23EXZKc3923qKpvVtU1uvuMZfod293Pnm+YQoSL26vqCkk+XlW3Wnqvy9jQvZ65+MG+\nqtYkOSLJk5K8KrNgYqckd+nui6pqryT/UFX3ySx8OS3JHyZ52XT+NZLcMMkPN/EeAAAAsAPaXrch\nrM3sG/JfbKxTVV01yb5JXpTkDlV1zenQgUne0t0/TJLuPi/JPZJ8ZAtq+GSSm1XVa5J8cANBweZa\nm9nqgrO3YYyLdfdCZgHJQ6emA5I8t7svmo5/K8mrM4UnSf4ryY+q6kbT64ckeeelUQsAAACrz/a0\nsmDfqjo5yUWZLaN/cnefW1VJ8pdVNf/t/ZO7+ytJ9k9yfHefX1VvT/LYJH+RZM8kX5wfvLvPTpJp\nvMVrLfqH7j5sST33TvK9JPdPsk9V3TDJd6fgYd7Dq+q209/z2xkeXlW3S3KdJD9J8tLu/s+q+rVN\nXH9D97rUD5Ncs6quldmqg6XByulJbjP3+u8ye79ekOR+SZ6b5M7LjAsAAMAObnsKC7Zmaf7BSX5R\nVSck2S3JdavqsCTfSnK9+Y5VdbP8ciXFRrchTMv4n5/k5kl+L8n7kuya2daE7y7pfoltCPPtVXX9\nJCck+drcsa2516X2mmr5cZI9qmrnJYHBDZN8e+71ezPbCvGmJD9I8tPNuAYAAAA7oO11G8ImVdVN\nk+zU3Xfs7v26+86Z7c3/gyTHJjm4qtZNfa+a5HWZfcu/OXbJ7BkAFyX5YGYfutck+e8trbO7v5HZ\n8xTeOT00cZtNz0B4VpLjuvtnmT0w8aVT++IzG/44ydFzdZybpJP8ZWbvDwAAACxre1pZsDFLl+b/\nU5KrJ3nrkn5HJnlSd9+9qg5NcnxVXZjZMwPe0N3/OP0awdJtAElyz8UtBt399ar62yQfzyww+GiS\nf87sFwcO3dLiu/ujVfXRzJ6t8A8buv6G7rW7X5DZ6oGTp3p2yez5C0dNff5vkhcm+dT0qwkXJDm4\nu0+ffg1h0TGZhSYPy2zlAQAAAFzCmoWFhZWuge3bwvr156x0DWyjdevWxjyuDuZydTCPq4e5XB3M\n4+pgHlcPc3nZWrdu7Zrl2i+32xAAAACA/xnCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAA\nYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAgLAAA\nAAAGwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsIC\nAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgICwAAAAABsICAAAAYCAsAAAAAAbCAgAAAGAg\nLAAAAAAGO690AWzffnDYt1a6BC4FP8iZl2jb6aA9LvtCAACAywUrCwAAAICBsAAAAAAYCAsAAACA\ngbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAA\nABgICwAAAICBsAAAAAAYCAsAAACAgbAAAAAAGAgLAAAAgIGwAAAAABgICwAAAICBsAAAAAAYCAsA\nAACAwc4rXcD2oqr2SfKOJKcmWUiye5LTk/xJks8m+fySU+6a5PlJHp7k+9M5V0zy3O4+uaq+meQ3\nu/v8afzfTHJEd+9TVScn2S3JT6f/PaW7n1ZVeyc5rrtvu6S2Fyb5QXcfUVVXT/JXSX49yS5Jvp3k\nj7r77Knvnkm+nuRR3f3OuXt7X5KbdPd3praXJflqdx+9DW8bAAAAq5CwYHRSd++/+KKqjk1y3ySn\ndvc+SztXVZIc3t1HTK9vlOSYJLfYjGs9sru/WlVrkny8qm6V5L8247y/S/K67n7PdM2nJ3ldksW6\nH53klUmemOSdc+ddkORNVXW37l7YjOsAAACwg7INYQOqatck10ly1hactkeSc7fwUldMsmuSMzej\npr2SXHsxKJi8MskfTcfXJDkwycuT7FpVN5nrd9J0jSduYX0AAADsYKwsGO07bRG4VpKLkrw+yYlJ\n/npqX/S57n7m9Pczqmr/JBcm+XGSx21k/Plv9N9SVT9NcoMkX03y3SR7bqK+PZN8Y76huy9Mcvb0\n8q5JvtLd66vqjZkFA4fMdT8kyWeq6oRNXAcAAIAdmLBgdFJ3719V10jykfzyg/my2xAmF29DWOK8\nzFYNnD+9vurUtmhxG8IVkrwxyaFJ3raJ+r6d5LrzDVW1S5KHdPcxmQUV15/CgF2T3Kyqnr3Yt7vP\nqKqnJXlzkk9s4loAAADsoGxDWEZ3n5HkgCRvyGwrwtb4fJI/nHt9zyT/usy1Lkryvcw+3G+qru8l\n+a+qut9c81OT3K+qrpnktklu0937dfe+SY5P8qglY7w/SSc5aIvuBgAAgB2GlQUb0N2nVtUrkzwj\nyY2XbENIZg8S3JhDk7y+qg5J8oskpyV5wtzxxW0IyexXEQ7I7BcYblJVn53r98yMDkzy6qp6VmYB\nw2mZrSh4bJJ3T9sSFh2Z5C0ZtyIkydMy27IAAAAAl7BmYcGD8dmwHxz2Lf+CrFI7HbTHSpfAVli3\nbm3Wrz9npctgG5nH1cNcrg7mcXUwj6uHubxsrVu3ds1y7bYhAAAAAANhAQAAADAQFgAAAAADYQEA\nAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAW\nAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMBAWAAAAAANhAQAAADDYeaULYPt2\n7f+zV9avP2ely2AbrVu31jwCAACbzcoCAAAAYCAsAAAAAAbCAgAAAGAgLAAAAAAGwgIAAABgsGZh\nYWGlawAAAAC2I1YWAAAAAANhAQAAADAQFgAAAAADYQEAAAAwEBYAAAAAA2EBAAAAMNh5pQtg+1NV\nV0jymiQ3S3JBkoO7++srWxVbq6puk+Qvunufla6FrVNVuyR5Y5K9k1wxyf/r7r9f0aLYKlW1U5Ij\nk1SShSRP6O5/W9mq2FpVda0kn0tyt+7+6krXw9apqs8n+cn08hvd/eiVrIetU1XPSXLfJLsmeU13\nH7XCJbEVquqgJAdNL6+U5HeSXLu7f7xSNe3IhAUs5/5JrtTdt6uq2yZ5eZL7rXBNbIWqOjTJgUn+\ne6VrYZsckOSM7j6wqvZI8sUkwoLLp/skSXffoar2SfLS+P/Xy6UpxHtdkvNWuha2XlVdKckagfrl\n2/T/p7dPcockuyV51ooWxFbr7qOTHJ0kVfXqJG8UFKwc2xBYzh2TnJAk3f2pJLda2XLYBqcleeBK\nF8E2e2eS509/r0nyixWshW3Q3e9N8vjp5V5J/AfQ5ddfJTkiyfdXuhC2yc2S7FZVH66qk6YvSbj8\nuUeSryR5T5L3J/nAypbDtqqqWyX5re5+/UrXsiMTFrCc3ZOcPff6wqqyCuVyqLvfneTnK10H26a7\nz+3uc6pqbZJ3JXneStfE1uvuX1TVm5O8KskxK10PW25aJru+uz+00rWwzX6aWfBzjyRPSHKM/+a5\nXLpmZl9uPTi/nMc1K1sS2+i5SV600kXs6IQFLOcnSdbOvb5Cd/smE1ZQVV0vyceSvLW7j13petg2\n3f2oJL+R5MiquspK18MWe0ySu1XVyZntp31LVV17ZUtiK30tydu6e6G7v5bkjCTXWeGa2HJnJPlQ\nd/+suzvJ+UnWrXBNbKWqulqS6u6PrXQtOzrJKcv5RGb7at8xLcf7ygrXAzu0qvrVJB9O8qTuPnGl\n62HrVdWBSa7b3X+e2TeaF03/cDnS3Xde/HsKDJ7Q3T9YuYrYBo9JctMkf1xVe2a2uvL/W9mS2Ar/\nkuSpVXV4ZmHPVTILELh8unMS/72zHRAWsJz3ZPaNySmZ7Y/2VGBYWc9NcvUkz6+qxWcX3LO7PVjt\n8uf4JG+qqn9OskuSp5lHWFFHJTm6qv4ls18oeYzVlJc/3f2Bqrpzks9ktnL6id194QqXxdarJKev\ndBEkaxYWFla6BgAAAGA74pkFAADw/7d3xzo6BlEch3+EC1BK9BPJKoWEQqlQ6SmoRCexkXUFKolC\no6PWuhUmQqFXKEREQbFfsVOs/dpv8zzdO2dyLuCf884BYCEsAAAAABbCAgAAAGAhLAAAAAAWtiEA\nAADADhtjXKtezDlvHVO/XT3bfJ6pblZ7c86Px/W0DQEAAAB21Bhjv7pX/ZxzXt/i/tPqwpzz4H/3\nTBYAAADA7vpS3a3eVY0xrlSvOpwg+F49mHP+2NQudRgsXD2pqTcLAAAAYEfNOd9Xf44cvakeb35J\n+FDtH6k9qV7OOX+f1NdkAQAAAJwel6vXY4yq89XnqjHG2epO9XybJsICAAAAOD1mdX/O+W2McaO6\nuDnfqz7NOX9t00RYAAAAAKfHo+rtGONc9bd6uDkf1ddtm9iGAAAAACw8cAgAAAAshAUAAADAQlgA\nAAAALIQFAAAAwEJYAAAAACyEBQAAAMBCWAAAAAAshAUAAADA4h9vME05+ASBxAAAAABJRU5ErkJg\ngg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x113eae6d8>"
+       "<matplotlib.figure.Figure at 0x1a09fbac50>"
       ]
      },
      "metadata": {},
@@ -345,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +518,7 @@
        "4                  UI     NaN         NaN   NaN      NaN         1  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
