--- a/py_spark/mean.ipynb
+++ b/py_spark/mean.ipynb
@@ -1,6 +1,73 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark import SparkContext, SparkConf\n",
+    "\n",
+    "conf = SparkConf().setAppName(\"reduce\").setMaster(\"local[*]\")\n",
+    "sc   = SparkContext(conf = conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean is: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "INPUT = [1, 2, 3, 4, 5]\n",
+    "N     = len(INPUT)\n",
+    "\n",
+    "integerRDD = sc.parallelize(INPUT)\n",
+    "\n",
+    "mean = (integerRDD\n",
+    "        .map(lambda x: x / N)\n",
+    "        .reduce(lambda x, y: (x + y)))\n",
+    "print(f\"Mean is: {mean}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
