trying modeling with pyspark

--- a/py_spark/mean.ipynb
+++ b/py_spark/mean.ipynb
@@ -10,13 +10,13 @@
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
     "\n",
-    "conf = SparkConf().setAppName(\"reduce\").setMaster(\"local[*]\")\n",
+    "conf = SparkConf()\n",
     "sc   = SparkContext(conf = conf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
