--- a/py_spark/template.ipynb
+++ b/py_spark/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -10,41 +10,9 @@
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
     "\n",
-    "conf = SparkConf()\n",
+    "conf = SparkConf().setAppName(\"reduce\").setMaster(\"local[*]\")\n",
     "sc   = SparkContext(conf = conf)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8! = 40320\n"
-     ]
-    }
-   ],
-   "source": [
-    "INPUT = 8\n",
-    "\n",
-    "inputIntegers = list(range(1, INPUT+1))\n",
-    "integerRDD = sc.parallelize(inputIntegers)\n",
-    "\n",
-    "product = integerRDD.reduce(lambda x, y: x * y)\n",
-    "print(f\"{INPUT}! = {product}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
